# excalidraw-ollama-proxy

./: Containerfile  Containerfile.excalidraw  README.md  app.py  excalidraw-ollama-proxy.container  pyproject.toml
tests/: test_app.py
