[project]
name = "excalidraw-ollama-proxy"
version = "0.1.0"
description = "Excalidraw AI proxy for Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
